Tela de emitir pedidos: Implementado todos os carregamentos

--- a/projetoGama.dproj
+++ b/projetoGama.dproj
@@ -125,6 +125,10 @@
             <Form>FrmConfiguracaoFrete</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="uFrmEmitirPedido.pas">
+            <Form>FrmEmitirPedido</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
